tests/specs/function_async.txt
# mod.ts
export async function a() {
  return;
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export async function a() {
  | ^

# output.txt
Defined in file:///mod.ts:1:1

async function a(): Promise<void>


# output.json
[
  {
    "kind": "function",
    "name": "a",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "functionDef": {
      "params": [],
      "returnType": {
        "repr": "Promise",
        "kind": "typeRef",
        "typeRef": {
          "typeParams": [
            {
              "repr": "void",
              "kind": "keyword",
              "keyword": "void"
            }
          ],
          "typeName": "Promise"
        }
      },
      "hasBody": true,
      "isAsync": true,
      "isGenerator": false,
      "typeParams": []
    }
  }
]
